--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,8 @@ services:
       - "5433:5432"
     env_file:
       - .env/development/database
+    volumes:
+      - db_data:/var/lib/postgresql/data
+
+volumes:
+  db_data:
