--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,17 +7,31 @@ services:
       - "3000:3000"
     volumes:
       - .:/usr/src/app
+      - gem_cache:/gems
     env_file:
       - .env/development/rails
       - .env/development/database
+      - .env/development/redis
     environment:
       - WEBPACKER_DEV_SERVER_HOST=wds
+
+  workers:
+    build: .
+    command: bundle exec sidekiq
+    volumes:
+      - .:/usr/src/app
+      - gem_cache:/gems
+    env_file:
+      - .env/development/rails
+      - .env/development/database
+      - .env/development/redis
 
   wds:
     build: .
     command: ./bin/webpack-dev-server
     volumes:
       - .:/usr/src/app
+      - gem_cache:/gems
     ports:
       - '3035:3035'
     env_file:
@@ -42,3 +56,4 @@ services:
 
 volumes:
   db_data:
+  gem_cache:
